# fastapi-podman-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-test  Makefile  README.md  env.RENAME  logging.conf  mkdocs.yml  pyproject.toml
app/: main.py
app/config/: config.py  config.toml
app/util/: config.py
docs/: frameworks.md  index.md
docs/source/: app.rst  conf.py  doc2.md  index.rst
fpt/: main.py
fpt/rest/: server.py
