[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
tomli = "^2.0.1"
pytest = "^7.2.1"
pre-commit = "^3.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
interrogate = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
